[tool.poetry]
name = "pornhub-dl"
version = "0.1.0"
description = "A nice pornhub "
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/pornhub"

[tool.poetry.dependencies]
python = ">=3.8, <4"

# Config/core
toml = "^0.10"
click = "^8"

# Scraping
requests = "^2.23"
beautifulsoup4 = "^4"
youtube_dl = "^2021"

# Database
alembic = "^1"
SQLAlchemy = "^1"
sqlalchemy-utils = "^0.38"
psycopg2-binary = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
